--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "prince",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "gitignore": "^0.7.0"
   }
 }
