--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "test": "cross-env NODE_ENV=test node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js"
   },
-  
-  
-   
   "dependencies": {
     "app-root-path": "^3.0.0",
     "aws-sdk": "^2.888.0",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
